--- a/.env.example
+++ b/.env.example
@@ -9,4 +9,4 @@ FLASK_APP=src/app.py
 FLASK_ENV=development
 
 # Front-End Variables
-BASENAME=/
+BACKEND_URL="https://3000-jul1998-finalbackendboi-anijfbiuzhh.ws-us74.gitpod.io/"
